# english_render

./: cookies.txt  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
media/subtitles/: 101.srt  108.srt  114.srt  120.srt  123.srt  125.srt  126.srt  129.srt  130.srt  131.srt  134.srt  23.srt  41.srt  45.srt  47.srt  86.srt  89.srt  90.srt  95.srt
static/css/: forms.css  statistics.css  video_detail.css  vocabulary.css
static/js/: statistics.js  upload_modal.js
templates/: base.html  home.html  statistics.html  video_detail.html  vocabulary.html
templates/components/: import_modal.html  pagination.html  sidebar.html  topbar.html  video_card.html  video_grid.html
videos/: admin.py  apps.py  forms.py  models.py  signals.py  views.py
videos/migrations/: 0001_initial.py  0002_vocabularyword.py  0003_remove_video_description_remove_video_file_and_more.py  0004_video_description_video_level.py  0005_video_subtitle_file.py  0006_delete_vocabularyword_vocabulary_word_count.py  0007_remove_vocabulary_word_count_video_word_count.py  0008_video_status.py
videos/services/: dictionary.py  thumbnails.py  transcription.py  video_processor.py  video_youtube.py
videos/templates/: upload.html
videos/utils/: srt_parser.py  youtube.py
