[project]
name = "english-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.7.1",
    "django>=5.2.14",
    "django-background-tasks>=1.2.8",
    "django-tailwind>=4.4.2",
    "eng-to-ipa>=0.0.2",
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20250625",
    "pillow>=12.2.0",
    "pytube>=15.0.0",
    "requests>=2.33.1",
    "yt-dlp>=2026.3.17",
]
